human-intervention-logs/com.google.cloud:grpc-gcp:1.10.0/gradle-test/gradle-test-2026-05-04T12-51-47-740941Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.google.cloud:grpc-gcp:1.10.0
Command: `/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4705-f9ef2ff9/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 7 busy and 6 incompatible and 207 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4705-f9ef2ff9/tests/src/com.google.cloud/grpc-gcp/1.10.0/src/test/java/com_google_cloud/grpc_gcp/Grpc_gcpTest.java:316: error: cannot find symbol
                    .withValue("analytics")
                    ^
  symbol:   method withValue(String)
  location: variable ME_CONTEXT_KEY of type Key<String>
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4705-f9ef2ff9/tests/src/com.google.cloud/grpc-gcp/1.10.0/src/test/java/com_google_cloud/grpc_gcp/Grpc_gcpTest.java:319: error: cannot find symbol
                    .withValue("analytics")
                    ^
  symbol:   method withValue(String)
  location: variable ME_CONTEXT_KEY of type Key<String>
Note: /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4705-f9ef2ff9/tests/src/com.google.cloud/grpc-gcp/1.10.0/src/test/java/com_google_cloud/grpc_gcp/Grpc_gcpTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4705-f9ef2ff9/tests/src/com.google.cloud/grpc-gcp/1.10.0/src/test/java/com_google_cloud/grpc_gcp/Grpc_gcpTest.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4705-f9ef2ff9/tests/src/com.google.cloud/grpc-gcp/1.10.0/src/test/java/com_google_cloud/grpc_gcp/Grpc_gcpTest.java:316: error: cannot find symbol
                      .withValue("analytics")
                      ^
    symbol:   method withValue(String)
    location: variable ME_CONTEXT_KEY of type Key<String>
> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4705-f9ef2ff9/tests/src/com.google.cloud/grpc-gcp/1.10.0/build/reports/problems/problems-report.html
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4705-f9ef2ff9/tests/src/com.google.cloud/grpc-gcp/1.10.0/src/test/java/com_google_cloud/grpc_gcp/Grpc_gcpTest.java:319: error: cannot find symbol
                      .withValue("analytics")
                      ^
    symbol:   method withValue(String)
    location: variable ME_CONTEXT_KEY of type Key<String>
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 8s
12 actionable tasks: 1 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4705-f9ef2ff9/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.google.cloud:grpc-gcp:1.10.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 10s
9 actionable tasks: 1 executed, 8 up-to-date
